# macaw-voice-agent

./: .claudeignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.claude/: ralph-loop.local.md  settings.json
docs/: ARCHITECTURE.md  ASR_STREAMING_RESEARCH.md  DEPLOYMENT.md  GPU_PROVISIONING.md  REFACTORING_PLAN.md  SOTA_VOICE_AGENTS_RESEARCH.md  TECHNICAL_STATUS.md  VOICE_AGENT_TOOLS_RESEARCH.md  review.txt
pesquisas/: Koel-TTS-Magpie-TTS-Deep-Research.md  NanoCodec-Deep-Research.md
prompts/: teste.txt
proto/: llm_service.proto
qwen3-tts-streaming/: CHANGELOG.md  PLANO_E2E_STREAMING.md  PLANO_EXECUTAVEL.md  README.md  pyproject.toml
qwen3-tts-streaming/.claude/: ralph-loop.local.md
qwen3-tts-streaming/macaw_tts/: __init__.py  audio.py  crossfade.py  decoder.py  model.py  predictor_graph.py  sampling.py  streaming.py  talker_graph.py
qwen3-tts-streaming/tests/: test_audio.py  test_crossfade.py  test_cuda_graphs.py  test_decoder.py  test_sampling.py  test_streaming_emitter.py
referencias/: MagpieTTS.py
scripts/: vastai-setup.sh  vastai-start.sh
src/: Dockerfile.combo  (+2 more)
src/api/: .env.example  CLAUDE.md  README.md  config.py  grpc_gen  main.py  pyproject.toml
src/api/audio/: codec.py  smart_turn.py  text_cleaning.py  utils.py  vad.py
src/api/docs/: LEARNINGS.md
src/api/intelligence/: context_builder.py  response_strategy.py  tool_engine.py
src/api/pipeline/: conversation.py  sentence_pipeline.py  sentence_splitter.py
src/api/protocol/: contract.py  event_emitter.py  events.py  metrics.py  models.py
src/api/providers/: _openai_stream.py  admission.py  asr.py  asr_qwen.py  asr_remote.py  asr_whisper.py  capabilities.py  llm.py  llm_anthropic.py  llm_openai.py  llm_remote.py  llm_vllm.py  registry.py  tts.py  tts_edge.py  tts_kokoro.py  tts_qwen.py  tts_remote.py
src/api/scripts/: deploy_vastai.sh  test_e2e.py
src/api/server/: audio_emitter.py  audio_input.py  conversation_store.py  filler.py  response_runner.py  session.py  system_metrics.py  ws_server.py
src/api/server/response/: __init__.py  audio_response.py  text_response.py  tool_response.py
src/api/tests/: conftest.py  test_admission.py  test_audio_codec.py  test_audio_emitter.py  test_audio_input.py  test_cancellation_races.py  test_config_validation.py  test_context_builder.py  test_conversation.py  test_conversation_store.py  test_conversation_window.py  test_e2e_streaming.py  test_event_emitter.py  test_events.py  test_filler.py  test_health_tracker.py  test_incremental_splitter.py  test_llm_sentences.py  test_recall_memory.py  test_response_metrics.py  test_response_strategy.py  test_sdk_compat.py  test_session.py  test_text_cleaning.py  test_tool_engine.py  test_tools.py  test_vad.py  test_web_search.py  test_ws_server.py
src/api/tools/: __init__.py  handlers.py  recall_memory.py  registry.py  web_search.py
src/api/turns/: turn_pipeline.py
src/macaw-asr/: .dockerignore  Dockerfile.faster-whisper  Dockerfile.nemo  Dockerfile.torch  MELHORIAS.md  PLAN_API.md  PLAN_OPENAI_COMPAT.md  README.md  ROADMAP.md  TUTORIAL.md  pyproject.toml
src/macaw-asr/demo/: index.html
src/macaw-asr/demo/.claude/: ralph-loop.local.md
src/macaw-asr/src/: __init__.py  _executor.py  config.py
src/macaw-asr/src/api/: __init__.py  client.py  types.py
src/macaw-asr/src/audio/: __init__.py  accumulator.py  decode.py  preprocessing.py
src/macaw-asr/src/cmd/: cli.py
src/macaw-asr/src/decode/: __init__.py  postprocess.py  strategies.py
src/macaw-asr/src/manifest/: __init__.py  contracts.py  paths.py  registry.py
src/macaw-asr/src/models/: __init__.py  base.py  contracts.py  factory.py  registry.py  types.py
src/macaw-asr/src/models/faster_whisper/: __init__.py  decoder.py  loader.py  model.py  preprocessor.py
src/macaw-asr/src/models/mock/: __init__.py  model.py
src/macaw-asr/src/models/parakeet/: __init__.py  decoder.py  loader.py  model.py  preprocessor.py
src/macaw-asr/src/models/qwen/: __init__.py  decoder.py  loader.py  model.py  preprocessor.py  prompt.py
src/macaw-asr/src/models/whisper/: __init__.py  decoder.py  loader.py  model.py  preprocessor.py
src/macaw-asr/src/runner/: __init__.py  contracts.py  engine.py  session.py
src/macaw-asr/src/server/: __init__.py  app.py  contracts.py  metrics.py  routes.py  scheduler.py
src/macaw-asr/src/server/routes/: __init__.py  audio.py  models.py  system.py
src/macaw-asr/tests/: conftest.py  test_api_server.py  test_openai_compat.py  test_openai_sdk_real.py  test_perf_audio.py  test_perf_compile.py  test_perf_engine.py  test_perf_model.py  test_perf_stress.py  test_perf_wer.py  test_real_audio.py  test_real_decode.py  test_real_engine.py  test_real_manifest.py  test_real_model.py  validate_parakeet.py  validate_refactored.py  validate_whisper.py  validate_whisper_server.py
src/macaw-asr/web/: index.html  package-lock.json  package.json  vite.config.ts
src/macaw-asr/web/src/: App.tsx  Compare.tsx  Metrics.tsx  Models.tsx  TimingBar.tsx  Transcribe.tsx  api.ts  index.css  useRecorder.ts
(+92 files in other folders)
